k8s/20-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: telemetry
spec:
  selector: { app: auth-service }
  ports:
    - port: 3001
      targetPort: 3001
